--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
 
 
 .main {
-    width: 100%;
+    width: inherit;
     display: flex;
     flex-direction: column;
 }
@@ -40,7 +40,7 @@ body {
     width: 618.8px;
     height: 118.3px;
     top: 101px;
-    left: 411px;
+    left: 100px;
     border: 1.3px;
     background-color: black;
     margin: auto;
@@ -51,8 +51,6 @@ body {
 .aws_invent {
     width: 319.8px;
     height: 118.3px;
-    top: 101px;
-    left: 411px;
     border: 1.3px;
 
 }
@@ -61,15 +59,11 @@ body {
     width: 274.3px;
     height: 58.49px;
     top: 132.2px;
-    left: 411px;
 }
 
 .fullstack_Text_div {
     position: relative;
-    /* width: 1412px;
-    height: 322px; */
     top: 338px;
-    left: 245px;
 
     .title {
         font-family: 'Manrope', sans-serif;
@@ -97,8 +91,6 @@ body {
 }
 
 .BoothTime_text {
-    /* width: 445px;
-    height: 320px; */
     margin-left: 17%;
     background: transparent;
 
@@ -142,15 +134,14 @@ body {
 }
 
 .wina_watch_div {
-    width: 100vw;
+    width: 98.4vw;
     height: 749px;
-    top: 2881px;
-    left: -16px;
     background-size: cover;
     background-color: rgb(3, 50, 54);
     display: flex;
     background-image: url(/assets/Images/Screen\ Shot\ 2022-09-02\ at\ 12.27\ 1.png);
 
+    /* background-size: cover; */
     .text-1 {
         margin: 15%;
 
@@ -206,7 +197,7 @@ body {
     justify-content: space-around;
     background-color: var(--var-Humboldt-color);
     margin-top: 10%;
-    padding: 5%;
+    /* padding: 5%; */
 }
 
 .Packet_Pushers_logo {
@@ -244,7 +235,6 @@ body {
 
 .golf-title {
     z-index: 111111;
-    margin-left: 13%;
     margin-top: 26%;
 
     .title {
@@ -337,41 +327,211 @@ body {
     align-items: center;
     text-align: center;
     padding-top: 10%;
+}
 
-    .h3 {
-        font-family: Manrope;
-        font-size: 38px;
-        font-weight: 700;
-        line-height: 46px;
-        letter-spacing: -0.03em;
-        text-align: left;
+.h3 {
+    font-family: Manrope;
+    font-size: 38px;
+    font-weight: 700;
+    line-height: 46px;
+    letter-spacing: -0.03em;
+    text-align: left;
 
+}
+
+
+
+.submit {
+    width: 387.2px;
+    height: 68.8px;
+    top: 1947.4px;
+    left: 802.4px;
+    border-radius: 4.8px;
+    background-color: black;
+    text-align: center;
+    font-family: Manrope;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 46px;
+    letter-spacing: 0.02em;
+
+}
+
+.checkBok-div {
+    width: inherit;
+    height: 100px;
+    font-size: 20px;
+}
+
+.input {
+    width: 387.2px;
+    height: 51.2px;
+    top: 1456.2px;
+    left: 800px;
+
+}
+
+@media(max-width:576px) {
+
+    body {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+
+    }
+
+    .main {
+        width: 80%;
+    }
+
+    .aws_prosimo {
+        width: 300px;
+        left: 50px;
+    }
+
+    .fullstack_Text_div {
+        top: 200px;
+
+        .title {
+            font-size: 60px;
+            line-height: 50px;
+        }
+    }
+
+    .BoothTime_logo {
+        margin-top: 50%;
+        flex-direction: column;
+
+    }
+
+    .BoothTime_text {
+        margin-left: 5%;
+
+        .label {
+
+            font-size: 1.2rem;
+            margin-left: 0;
+        }
+    }
+
+    .logo_842 {
+        margin-left: 2%;
+        margin-top: 6%;
+    }
+
+    .Topgolf {
+        flex-direction: column;
+    }
+
+    .golf-title {
+        .li {
+            font-size: 20px;
+        }
+
+    }
+
+    .Topgolf {
+        .img {
+            margin-left: 0;
+        }
+    }
+
+    .TopGolf_Text_Form {
+        margin-left: 0;
+    }
+
+    .Topgolf_logo_Text {
+        font-size: 30px;
+        letter-spacing: 0;
+    }
+
+    .Topgolf_Downtimetext {
+        font-size: 20px;
+    }
+
+    .Form_Area {
+        width: 300px;
+        height: 600px;
     }
 
     .form {
-        .input {
-            width: 387.2px;
-            height: 51.2px;
-            top: 1456.2px;
-            left: 800px;
+        width: 280px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .input {
+        width: 240px;
+        height: 30px;
+        margin: 15px;
+    }
+
+    .submit {
+        width: 240px;
+        height: 35px;
+        font-size: 28px;
+    }
+
+    .Packet_Pushers {
+        width: 300px;
+        flex-direction: column;
+    }
+
+    .two_menPic_mic {
+        width: 300px;
+        height: 300px;
+        background-size: contain;
+    }
+
+    .Packet_Pushers_Text {
+
+        .h4 {
+            font-size: 30px;
         }
 
-        .submit {
-            width: 387.2px;
-            height: 68.8px;
-            top: 1947.4px;
-            left: 802.4px;
-            border-radius: 4.8px;
-            background-color: black;
-            text-align: center;
-            font-family: Manrope;
-            font-size: 32px;
-            font-weight: 700;
-            line-height: 46px;
-            letter-spacing: 0.02em;
-                
-
-
+        .para
+        {
+            font-size: 18px;
+            line-height: 25px;
         }
     }
+
+    .wina_watch_div
+    {
+        background-size: contain;
+        width: 300px;
+        height: 400px;
+        flex-direction: column;
+        align-items: center;
+        padding-top:50px;
+
+        .text-1
+        {
+            margin: 5%;
+
+            .p-white
+            {
+                font-size: 40px;
+                line-height: 30px;
+            }
+
+            .para
+            {
+                font-size: 40px;
+                line-height: 35px;
+            }
+        }
+
+        .text-2
+        {
+            margin-top: 10%;
+            .para
+            {
+                font-size: 20px;
+                line-height: 20px;
+            }
+        }
+    }
+
 }
