--- a/css/style.css
+++ b/css/style.css
@@ -34,13 +34,20 @@ body {
     flex-direction: column;
 }
 
+.container
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 .aws_prosimo {
     display: flex;
     width: 618.8px;
     height: 118.3px;
     top: 101px;
-    left: 100px;
+    left: 413px;
     border: 1.3px;
     background-color: black;
     margin: auto;
@@ -91,7 +98,7 @@ body {
 }
 
 .BoothTime_text {
-    margin-left: 17%;
+  margin-left: -17%;
     background: transparent;
 
     .h3 {
@@ -106,7 +113,7 @@ body {
 
     .label {
         font-family: Manrope;
-        font-size: 28px;
+        font-size :28px;
         font-weight: 400;
         line-height: 41px;
         letter-spacing: -0.02em;
@@ -123,12 +130,13 @@ body {
     margin-top: 1%;
 
     .img1 {
+        width: inherit;
         background: transparent;
     }
 
     .img2 {
         position: absolute;
-        margin-left: -235px;
+        margin-left: -229px;
         margin-top: 1%;
     }
 }
