--- a/css/style.css
+++ b/css/style.css
@@ -264,12 +264,16 @@ body {
         }
 
         .ball_tail {
-            width: 1221px;
-            height: 573.18px;
+            width: 170%;
+            height: 100%;
             z-index: -1;
             position: absolute;
-            left: 150px;
-            bottom: -160%;
+            left: 0;
+            top:170%;
+            .ball{
+                width:450px
+            }
+            
         }
 
         .title {
@@ -439,7 +443,7 @@ body {
         background-size: cover;
         background-color: rgb(3, 50, 54);
         display: flex;
-        background-image: url(/assets/Images/Screen\ Shot\ 2022-09-02\ at\ 12.27\ 1.png);
+        background-image: url(/assets/Images/watch.png);
 
         .text-1 {
             margin: 15%;
@@ -983,9 +987,14 @@ body {
             }
 
             .ball_tail {
-                display: none;
+                width: 100%;
+                height: 100%;
+                z-index: -1;
+                position: absolute;
+                left: 0;
+                top:280%   ;
+                
             }
-
 
             .Form_Area {
                 width: inherit;
@@ -1047,37 +1056,35 @@ body {
 
     .container-watch {
         .wina_watch_div {
-            background-size: cover;
-            background-position: center;
-            width: inherit;
-            height: 400px;
-            flex-direction: column;
-            align-items: center;
-            padding-top: 50px;
-
-            .text-1 {
-                margin: 5%;
-
-                .p-white {
-                    font-size: 40px;
-                    line-height: 30px;
-                }
-
-                .para {
-                    font-size: 40px;
-                    line-height: 35px;
-                }
+          background-size: cover;
+          background-position: center;
+          width: inherit;
+          height: 400px;
+          flex-direction: column;
+          align-items: center;
+          padding-top: 50px;
+    
+          .text-1 {
+            margin: 5%;
+    
+            .p-white {
+              font-size: 40px;
+              line-height: 30px;
             }
-
-            .text-2 {
-                margin-top: 10%;
-
-                .para {
-                    font-size: 20px;
-                    line-height: 20px;
-                }
+    
+            .para {
+              font-size: 40px;
+              line-height: 35px;
             }
+          }
+    
+          .text-2 {
+            margin-top: 10%;
+            .para {
+              font-size: 20px;
+              line-height: 20px;
+            }
+          }
         }
-    }
-
+      }
 }
